# rcsvRogue

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
kit/: embed-commitId.rb
src/: build.rs  lib.rs  main.rs
src/assets/: assets.rs  game_text.rs  mod.rs
src/toml/: README.md  toml.abnf
